@@ -72,6 +72,9 @@ CREATE TABLE graphs (
   name			varchar(128)	DEFAULT '' NOT NULL,
   width			int(4)		DEFAULT '0' NOT NULL,
   height		int(4)		DEFAULT '0' NOT NULL,
+  yaxistype		int(1)		DEFAULT '0' NOT NULL,
+  yaxismin		double(16,4)	DEFAULT '0' NOT NULL,
+  yaxismax		double(16,4)	DEFAULT '0' NOT NULL,
   PRIMARY KEY (graphid),
   UNIQUE (name)
 ) type=InnoDB;
