@@ -31,6 +31,9 @@
 	define("GRAPH_DRAW_TYPE_DOT",3);
 	define("GRAPH_DRAW_TYPE_DASHEDLINE",4);
 
+	define("GRAPH_YAXIS_TYPE_CALCULATED",0);
+	define("GRAPH_YAXIS_TYPE_FIXED",1);
+
 	define("ITEM_VALUE_TYPE_FLOAT",0);
 	define("ITEM_VALUE_TYPE_STR",1);
 
