@@ -1,5 +1,7 @@
 Changes for 1.1alpha1:
 
+ - added support for customised Y axis for graphs (Alexei)
+ - added columns graphs.(yaxistype|yaxismin|yaxismax) (Alexei)
  - send date as part of email alerts (Alexei)
  - added SuSE 9.1 startup scripts. Thanks to A.Tophofen. (Alexei)
  - change of architecture to multi-threaded model (Alexei)
